--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,141 @@
+.container_menu {
+ align-items: center;
+ text-align: center;
+ padding: 15px;
+}
 
 .menu {
-    text-align: center; /*texto centralizado*/
+  text-align: center; 
+  display: grid;
+  place-items: center;
 }
 
 .menu img {
-    padding-left: 45px;
     width: 300px;
     height: 300px;
+    
 }
 
-.menu ul li{ /*estilizando o  ul li do menu*/
-    list-style: none; /* tira as bolinhas do ul*/
-
-    padding: 4px; /*espaçamento entre as palavras*/
+.menu ul li{ 
+    list-style: none; 
+    padding: 4px; 
   }
 
-.menu ul li a{  /*estilizando o  ul li e o a do menu*/
-    font-family: Arial; /* tipo de fonte do texto*/
-    font-size: 20px; /*tamanho da fonte*/
-    color:black; /*cor da fonte*/
-    text-decoration: none; /*tira o sublinhado da palavra*/
+.menu ul li a{  
+    font-family: Arial; 
+    font-size: 20px; 
+    color:black; 
+    text-decoration: none; 
     transition: 0.3s;
   }
 
 .menu ul li a:hover{  
-    background-color: lightgray; /*cor de fundo do hover*/
-    color:purple; /*cor da fonte do hover*/
-    padding: 4px;   /*espaçamento entre as palavras*/
+    background-color: lightgray;
+    color:purple;
+    padding: 4px;   
     border-radius: 10px;
-   
   }
 .container {
     width:100%;
     height:900px;
 
+}
+
+.botao_modo_escuro {
+  background-color: #FFFFFF;
+  border: 0;
+  border-radius: .5rem;
+  box-sizing: border-box;
+  color: #111827;
+  padding: .75rem 1rem;
+  text-align: center;
+  text-decoration: none #D1D5DB solid;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  cursor: pointer;
+  transition:0.3s;
+}
+
+.botao_modo_escuro:hover {
+  background-color: #121212;
+  color:white;
+
+}
+
+.botao_modo_escuro:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.botao_modo_escuro:focus-visible {
+  box-shadow: none;
+}
+
+.botao_modo_bordo {
+  background-color: #FFFFFF;
+  border: 0;
+  border-radius: .5rem;
+  box-sizing: border-box;
+  color: #111827;
+  padding: .75rem 1rem;
+  text-align: center;
+  text-decoration: none #D1D5DB solid;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  cursor: pointer;
+  transition:0.3s;
+}
+
+.botao_modo_bordo:hover {
+  background-color: #5F021F;
+  color:white;
+
+}
+
+.botao_modo_bordo:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.botao_modo_bordo:focus-visible {
+  box-shadow: none;
+}
+
+.botao_modo_noite {
+  background-color: #FFFFFF;
+  border: 0;
+  border-radius: .5rem;
+  box-sizing: border-box;
+  color: #111827;
+  padding: .75rem 1rem;
+  text-align: center;
+  text-decoration: none #D1D5DB solid;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  cursor: pointer;
+  transition:0.3s;
+}
+
+.botao_modo_noite:hover {
+  background-color:  #191970;
+  color:white;
+
+}
+
+.botao_modo_noite:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.botao_modo_noite:focus-visible {
+  box-shadow: none;
+}
+
+.modo_escuro {
+  background-color: #111827;
+}
+
+.modo_bordo {
+  background-color: #5F021F;
+}
+
+.modo_noite {
+  background-color: #191970;
 }
