--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@
     
 }
 
+.menu ul {
+  display: flex;
+}
+
 .menu ul li{ 
     list-style: none; 
     padding: 4px; 
@@ -37,7 +41,8 @@
   }
 .container {
     width:100%;
-    height:900px;
+    align-items: center;
+    text-align: center;
 
 }
 
